# Axiump

./: .gitignore  README.md  pyproject.toml  requirements.txt
axiumplib/: __init__.py  blade.py  glob_params.py  hub.py  profile.py  rotor.py  shroud.py
axiumplib/utils/: decorators.py  errors.py  geom.py  occ.py
examples/: ex_blade.py  ex_profile.py  ex_qt6.py  ex_random_rotor.py
