[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Axiump"
version = "0.0.1"
authors = [
  { name="Maxime Renault", email="maxime.renault@minesparis.psl.eu" },
]
description = "Axial pump generation package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/maximerenault/Axiump"
Issues = "https://github.com/maximerenault/Axiump/issues"